# Lace

./: LICENSE  NOTICE  README.md  demo_app.py  demo_app_3.py  pyproject.toml
lace/: __init__.py  codemap_gui.py  dock_area_layout.py  dock_area_tab_bar.py  dock_area_title_bar.py  dock_area_widget.py  dock_container_widget.py  dock_context_menu.py  dock_custome_theme.py  dock_icon_provider.py  dock_manager.py  dock_overlay.py  dock_palette_bridge.py  dock_signals.py  dock_splitter.py  dock_style_manager.py  dock_theme.py  dock_theme_bridge.py  dock_widget.py  dock_widget_tab.py  eliding_label.py  enums.py  floating_dock_container.py  layout_serializer.py  sidebar_container.py  sidebar_manager.py  sidebar_overlay.py  sidebar_state.py  sidebar_tab.py  sidebar_tab_bar.py  sidebar_title_bar.py  state_serializer.py  util.py
