[project]
name = "lace-docking"
version = "0.1.0"
description = "Advanced PySide6 docking system"
authors = [
    {name = "opticsWolf", email = "opticswolf@protonmail.com"}
]
# This tells PyPI your primary license
license = {text = "Apache-2.0"}

# These "Classifiers" help people find your project by license type
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: BSD License", 
    "Programming Language :: Python :: 3",
    "Framework :: Qt",
]

# Ensure the LICENSE and NOTICE are included in the source distribution
[tool.setuptools.package-data]
"*" = ["LICENSE", "NOTICE"]
